refactor update session and create add category