@@ -6,6 +6,7 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Component
@@ -22,6 +23,6 @@ public class TechnologyMapper {
     public List<Technology> technologiesStringToTechnologyList(List<String> technologies) {
         return technologies.stream()
                 .map(technologyManagementData::getTechnologyByName)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
